# Minesweeper

./: CMakeLists.txt  Doc.txt
Backend/: Board.cpp  Board.h  CMakeLists.txt  Cell.h  NumberException.h  gameBoard.txt  testyGame.cpp
Visual/: Project2.cbproj  Project2.cbproj.local  Project2.cpp  Project2.res  Unit2.cpp  Unit2.dfm
Visual/__recovery/: Unit2.cpp  Unit2.h  __recovery.ini
